<?xml version="1.0"?>

<!--
Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<package format="3">
  <name>isaac_ros_apriltag</name>
  <version>0.9.0</version>
  <description>AprilTag detection</description>

  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
  <license>JetPack EULA</license>
  <url type="website">https://developer.nvidia.com/blog/accelerating-ai-modules-for-ros-and-ros-2-on-jetson/</url>
  <author>Arjun Bhorkar</author>
  <author>Hemal Shah</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>isaac_ros_image_proc</depend>
  <depend>isaac_ros_apriltag_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
